# CoWordle

./: README.md  Untitled
backend/: Cargo.toml  Dockerfile  test.html  wordle-allowed-guesses.txt
backend/src/: dict.rs  game.rs  main.rs  websocket.rs
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend-solidjs/: Untitled
frontend-solidjs/src/: main.css
frontend-solidjs/src/api/: websocket.ts
frontend-solidjs/src/components/: Board.tsx  JoinData.tsx
frontend-solidjs/src/pages/: Game.tsx  Home.tsx
frontend-solidjs/src/store/: gameStore.ts
frontend-solidjs/src/types/: clinetMessage.ts  gameStoreTypes.ts  index.ts  serverMessage.ts
frontend/public/: robots.txt
frontend/src/: main.css  main.tsx  router.tsx
frontend/src/api/: websocket.ts  websocketProvider.tsx
frontend/src/components/: Background.tsx  Board.tsx  ConnectionDot.tsx  End.tsx  EndData.tsx  Game.tsx  Join.tsx  JoinData.tsx  Keyboard.tsx  NavBar.tsx  Row.tsx  Toast.tsx  Waiting.tsx
frontend/src/context/: guessContext.ts  websocketContext.ts
frontend/src/hooks/: useWebSocketHandler.ts
frontend/src/pages/: Game.tsx  Home.tsx  HomePage.tsx
frontend/src/providers/: guessProvider.tsx  websocketProvider.tsx
frontend/src/store/: gameStore.ts  useGame.ts
frontend/src/types/: clientMessage.ts  clinetMessage.ts  gameStoreTypes.ts  guessTypes.ts  index.ts  serverMessage.ts  websocketTypes.ts
